infrastructure/aws/sg.tf
resource "aws_security_group" "worker_group_vpc" {
  name_prefix = "worker_group_mgmt_one"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = list(var.vpc_cidr)
  }
}

resource "aws_security_group" "home_access" {
  name_prefix = "worker_group_mgmt_one"
  vpc_id      = module.vpc.vpc_id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = ["109.49.49.121/32"]
  }
}
